--- a/l10n_py_vat_book/report/account_py_vat_line_views.xml
+++ b/l10n_py_vat_book/report/account_py_vat_line_views.xml
@@ -14,8 +14,8 @@
                 <separator/>
                 <filter name="posted" string="Posted" domain="[('state','=','posted')]" help="Posted Journal Items"/>
                 <separator/>
-                <filter string="Sales VAT" name="sales_vat" domain="[('type', 'in', ['out_invoice', 'out_refund'])]" />
-                <filter string="Purchase VAT" name="purchase_vat" domain="[('type', 'in', ['in_invoice', 'in_refund'])]" />
+                <filter string="IVA Ventas" name="sales_vat" domain="[('type', 'in', ['out_invoice', 'out_refund'])]" />
+                <filter string="IVA Compras" name="purchase_vat" domain="[('type', 'in', ['in_invoice', 'in_refund'])]" />
                 <separator/>
                 <filter string="With Document Type" name="with_document_type" domain="[('document_type_id','!=', False)]"/>
                 <group expand="0" string="Group By...">
