--- a/l10n_py_vat_book/report/account_py_vat_line_views.xml
+++ b/l10n_py_vat_book/report/account_py_vat_line_views.xml
@@ -12,7 +12,7 @@
                 <field name="company_id" groups="base.group_multi_company"/>
                 <field name="type"/>
                 <separator/>
-                <filter name="posted" string="Posted" domain="[('state','=','posted')]" help="Posted Journal Items"/>
+                <filter name="posted" string="Publicado" domain="[('state','=','posted')]" help="Posted Journal Items"/>
                 <separator/>
                 <filter string="IVA Ventas" name="sales_vat" domain="[('type', 'in', ['out_invoice', 'out_refund'])]" />
                 <filter string="IVA Compras" name="purchase_vat" domain="[('type', 'in', ['in_invoice', 'in_refund'])]" />
