[WIP] elimnar archivos obsoletos, agregar partner_type, corregir tests

--- a/l10n_py_invoice_document/views/res_partner_view.xml
+++ b/l10n_py_invoice_document/views/res_partner_view.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
-    <!-- cambiar NIF -> RUC y agregar CI -->
+    <!-- cambiar NIF -> RUC y agregar CI y tipo de partner -->
     <record id="view_partner_form" model="ir.ui.view">
-        <field name="name">INVOICE DOCUMENT Cedula</field>
+        <field name="name">INVOICE DOCUMENT Identificacion partner</field>
         <field name="model">res.partner</field>
         <field name="inherit_id" ref="base.view_partner_form"/>
         <field name="arch" type="xml">
@@ -13,6 +13,7 @@
             <xpath expr="//field[@name='vat']" position="after">
                 <field name="ruc"/>
                 <field name="ci"/>
+                <field name="partner_type_id"/>
             </xpath>
         </field>
     </record>
