[ADD] utilizar cuentas contables por defecto y documentacion

--- a/l10n_py_invoice_document/views/partner_type_view.xml
+++ b/l10n_py_invoice_document/views/partner_type_view.xml
@@ -7,12 +7,18 @@
         <field name="arch" type="xml">
             <form string="Partner Type">
                 <group>
-                    <field name="name"/>
-                    <field name="ruc_required_person" widget="boolean_toggle"/>
-                    <field name="ruc_required_company" widget="boolean_toggle"/>
-                    <field name="consolidated_ruc"/>
-                    <field name="default_account"/>
-                    <field name="applied_to"/>
+                    <group>
+                        <field name="name"/>
+                        <field name="consolidated_ruc"/>
+                        <field name="applied_to"/>
+                    </group>
+                    <group>
+                        <field name="ruc_required_person"
+                               widget="boolean_toggle"/>
+                        <field name="ruc_required_company"
+                               widget="boolean_toggle"/>
+                        <field name="default_account"/>
+                    </group>
                 </group>
             </form>
         </field>
