[ADD] libros de iva (Enterprise only)

--- a/l10n_py_invoice_document/views/res_partner_view.xml
+++ b/l10n_py_invoice_document/views/res_partner_view.xml
@@ -13,7 +13,10 @@
             <xpath expr="//field[@name='vat']" position="after">
                 <field name="ruc"/>
                 <field name="ci"/>
-                <field name="partner_type_id" options="{'no_open': False,'no_create':True}"/>
+                <field name="partner_type_id"
+                       options="{'no_open': False,'no_create':True}"
+                       required="True"
+                />
             </xpath>
         </field>
     </record>
