--- a/l10n_py_invoice_document/views/timbrado_views.xml
+++ b/l10n_py_invoice_document/views/timbrado_views.xml
@@ -15,9 +15,10 @@
                     <field name="state" widget="statusbar"/>
                 </header>
                 <group col="1">
-                    <group>
+                    <group col="1">
+                        <label for="name"/>
                         <h1>
-                            <field name="name"/>
+                            <field name="name" placeholder="Debe ser un numero de ocho digitos"/>
                         </h1>
                     </group>
                     <group col="2">
