[FIX] mover la secuencia del diario al timbrado #45

--- a/l10n_py_invoice_document/views/timbrado_views.xml
+++ b/l10n_py_invoice_document/views/timbrado_views.xml
@@ -34,6 +34,8 @@
                             <field name="qty"/>
                             <field name="document_type_id"/>
                             <field name="print_system"/>
+                            <field name="next_number"/>
+                            <field name="sequence_id"/>
                         </group>
                     </group>
                 </group>
