--- a/l10n_py_check_printing/static/src/scss/report_check_bottom.scss
+++ b/l10n_py_check_printing/static/src/scss/report_check_bottom.scss
@@ -1,46 +1,45 @@
-.ckca_middle_page {
+.ckca_bottom_page {
     .ckca_stub_1 {
         top: 0in;
     }
-    .ckca_check {
-        top: 3.45in;
+    .ckpy_stub_2 {
+        top: 3.95in;
     }
-    .ckca_stub_2 {
-        top: 7.0in;
+    .ckpy_check {
+        top: 7.5in;
     }
 
-    .ckca_check .sequence_number {
-        top: 0in;
-        left: 7.19in;
-        width: 0.76in;
-        text-align: center;
+    .ckpy_check .sequence_number {
+        top: 0.2in;
+        left: 6.9in;
+        width: 0.7in;
     }
-    .ckca_date_label {
+    .ckpy_date_label {
         top: 0.55in;
         left: 6in;
         width: .75in;
         text-align: center;
     }
-    .ckca_date {
+    .ckpy_date {
         top: 0.55in;
         left: 6.37in;
         width: 1.47in;
         text-align: center;
     }
-    .ckca_date_format {
+    .ckpy_date_format {
         top: 0.7in;
         left: 6.37in;
         width: 1.47in;
         text-align: center;
         font-size: 0.8em;
     }
-    .ckca_amount {
+    .ckpy_amount {
         top: 1in;
         left: 6.8in;
-        width: 1.07in;
+        width: 1.08in;
         text-align: left;
     }
-    .ckca_amount_in_word {
+    .ckpy_amount_in_word {
         top: 1in;
         left: 0.25in;
         width: 6in;
@@ -48,23 +47,23 @@
         font-weight: bold;
         overflow: hidden;
     }
-    .ckca_payee_name {
+    .ckpy_payee_name {
         top: 1.3in;
         left: 0.5in;
         width: 3.5in;
         text-align: left;
     }
-    .ckca_payee_address {
+    .ckpy_payee_address {
         top: 1.5in;
         left: 0.5in;
         width: 4.0in;
         text-align: left;
         font-size: 0.9em;
     }
-    .ckca_memo {
-        top: 2.3in;
-        left: 0.63in;
-        width: 4.3in;
+    .ckpy_memo {
+        top: 2.65in;
+        left: 0.8in;
+        width: 2.9in;
         text-align: left;
         font-size: 0.9em;
         overflow: hidden;
