--- a/l10n_py_check_printing/static/src/scss/report_check_middle.scss
+++ b/l10n_py_check_printing/static/src/scss/report_check_middle.scss
@@ -1,69 +1,70 @@
-.ckca_top_page {
-    .ckca_check {
+.ckpy_middle_page {
+    .ckpy_stub_1 {
         top: 0in;
     }
-    .ckca_stub_1 {
+    .ckpy_check {
         top: 3.45in;
     }
-    .ckca_stub_2 {
-        top: 7in;
+    .ckpy_stub_2 {
+        top: 7.0in;
     }
 
-    .ckca_check .sequence_number {
-        top: 0.1in;
-        left: 7.1in;
-        width: 0.7in;
+    .ckpy_check .sequence_number {
+        top: 0in;
+        left: 7.19in;
+        width: 0.76in;
+        text-align: center;
     }
-    .ckca_date_label {
+    .ckpy_date_label {
         top: 0.55in;
         left: 6in;
         width: .75in;
         text-align: center;
     }
-    .ckca_date {
+    .ckpy_date {
         top: 0.55in;
         left: 6.37in;
         width: 1.47in;
         text-align: center;
     }
-    .ckca_date_format {
-        top: 0.75in;
+    .ckpy_date_format {
+        top: 0.7in;
         left: 6.37in;
         width: 1.47in;
         text-align: center;
         font-size: 0.8em;
     }
-    .ckca_amount {
-        top: 1.17in;
-        left: 6.77in;
-        width: 1.08in;
+    .ckpy_amount {
+        top: 1in;
+        left: 6.8in;
+        width: 1.07in;
         text-align: left;
     }
-    .ckca_amount_in_word {
-        top: 1.17in;
+    .ckpy_amount_in_word {
+        top: 1in;
         left: 0.25in;
         width: 6in;
         text-align: left;
         font-weight: bold;
         overflow: hidden;
     }
-    .ckca_payee_name {
-        top: 1.67in;
+    .ckpy_payee_name {
+        top: 1.3in;
         left: 0.5in;
-        width: 4.0in;
+        width: 3.5in;
         text-align: left;
     }
-    .ckca_payee_address {
-        top: 1.87in;
+    .ckpy_payee_address {
+        top: 1.5in;
         left: 0.5in;
         width: 4.0in;
         text-align: left;
         font-size: 0.9em;
     }
-    .ckca_memo {
-        top: 2.6in;
-        left: 0.65in;
-        width: 2.9in;
+    .ckpy_memo {
+        top: 2.3in;
+        left: 0.63in;
+        width: 4.3in;
         text-align: left;
         font-size: 0.9em;
         overflow: hidden;
