--- a/l10n_py_check_printing/views/account_checkbook_view.xml
+++ b/l10n_py_check_printing/views/account_checkbook_view.xml
@@ -77,6 +77,6 @@
     <menuitem id="menu_checkbook"
         action="action_account_checkbook"
         sequence="41"
-        parent="account_payment_fix.menu_finance_bank_and_cash"/>
+        parent="menu_check_configuration"/>
 
 </odoo>
