--- a/l10n_py_check_printing/views/check_layout_view.xml
+++ b/l10n_py_check_printing/views/check_layout_view.xml
@@ -1,23 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-<data>
-    <!-- diseno de cheques -->
-    <record id="action_check_layout" model="ir.actions.act_window">
-        <field name="name">Diseño de cheques</field>
-        <field name="res_model">check.layout</field>
-        <field name="view_mode">tree,form</field>
-    </record>
-<!--
-    <menuitem id="l10n_py_check_printing.menu_configuracion"
-              parent="account.menu_finance"
-              sequence="4"
-              groups="account.group_account_user"
-              name="Configuracion"/>
--->
-    <menuitem id="menu_check_layout"
-        action="action_check_layout"
-        sequence="42"
-        parent="account_payment_fix.menu_finance_bank_and_cash"/>
+    <data>
+        <!-- diseno de cheques -->
+        <record id="action_check_layout" model="ir.actions.act_window">
+            <field name="name">Diseño de cheques</field>
+            <field name="res_model">check.layout</field>
+            <field name="view_mode">tree,form</field>
+        </record>
 
-</data>
+        <menuitem id="menu_check_configuration"
+                  name="Configuracion"
+                  sequence="42"
+                  parent="account.menu_finance"/>
+
+        <menuitem id="menu_check_layout"
+                  action="action_check_layout"
+                  sequence="42"
+                  parent="menu_check_configuration"/>
+
+    </data>
 </odoo>
