--- a/l10n_py_check_printing/report/print_check.xml
+++ b/l10n_py_check_printing/report/print_check.xml
@@ -4,27 +4,40 @@
 <template id="print_check">
     <t t-foreach="docs" t-as="o">
         <t t-call="web.basic_layout">
-            <div t-att-style-amount="o.layout.style_amount">
+            <div style="position: absolute;left: 116;top: 200;">
+<!--
+            <div t-att-style="o.checkbook_id.layout_id.style_amount">
+-->
                 importe <span t-field="o.amount"/>
             </div>
-            <div style="position: absolute;left: 1160;top: 200;">
+
+            <div style="position: absolute;left: 116;top: 200;">
+                <p>hola</p>
+            </div>
+
+            <!--
+
+
+
+            <div t-att-style="o.checkbook_id.layout_id.style_issue_date">
                 Fecha de emision
                 <span t-field="o.check_issue_date"/>
             </div>
-            <div style="position: absolute; left: 2000;            bottom: 200;">
+            <div t-att-style="o.checkbook_id.layout_id.style_payment_date">
                 Fecha de pago
                 <span t-field="o.check_payment_date"/>
             </div>
-            <div style="position: absolute;            left: 370;            top: 300;">
+            <div t-att-style="o.checkbook_id.layout_id.style_name">
                 A la orden de
                 <span t-field="o.partner_id.name"/>
             </div>
-            <div style="position: absolute;            left: 370;            top: 350;">
+            <div t-att-style="o.checkbook_id.layout_id.style_amount_words">
                 Importe en letras
                 <span t-field="o.check_amount_in_words"/>
             </div>
             cheque Nro
             <span t-field="o.check_id.name"/>
+-->
         </t>
     </t>
 </template>
