--- a/l10n_py_check_printing/report/print_check.xml
+++ b/l10n_py_check_printing/report/print_check.xml
@@ -1,43 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
+
+    <template id="single_check">
+        <div t-att-style="o.checkbook_id.layout_id.style_amount"
+             t-if="o.checkbook_id.layout_id.amount"
+             style="border: 1px solid red; height=10px; width:30px">
+            <strong>
+                <span t-field="o.amount"/>
+            </strong>
+        </div>
+
+        <div t-att-style="o.checkbook_id.layout_id.style_issue_date"
+             t-if="o.checkbook_id.layout_id.issue_date"
+             style="border: 1px dashed blue;">
+            <span t-field="o.check_issue_date"/>
+        </div>
+
+        <div t-att-style="o.checkbook_id.layout_id.style_payment_date"
+             t-if="o.checkbook_id.layout_id.payment_date"
+             style="border: 1px dashed blue;">
+            <span t-field="o.check_payment_date"/>
+        </div>
+
+        <div t-att-style="o.checkbook_id.layout_id.style_name"
+             t-if="o.checkbook_id.layout_id.name"
+             style="border: 1px dashed blue;">
+            <span t-field="o.partner_id.name"/>
+        </div>
+
+        <div t-att-style="o.checkbook_id.layout_id.style_amount_words"
+             t-if="o.checkbook_id.layout_id.amount_words"
+             style="border: 1px dashed blue;">
+            <span t-field="o.check_amount_in_words"/>
+        </div>
+        <div t-att-style="o.checkbook_id.layout_id.style_check_no"
+             t-if="o.checkbook_id.layout_id.check_no">
+            cheque Nro:
+            <span t-field="o.check_id.name"/>
+        </div>
+    </template>
+
     <template id="print_check">
         <t t-call="web.basic_layout">
             <t t-foreach="docs" t-as="o">
-                <!-- cada cheque es una pagina -->
-                <div class="page">
 
-                    <div t-att-style="o.checkbook_id.layout_id.style_amount"
-                         t-if="o.checkbook_id.layout_id.amount">
-                        <strong><span t-field="o.amount"/></strong>
-                    </div>
-
-                    <div t-att-style="o.checkbook_id.layout_id.style_issue_date"
-                         t-if="o.checkbook_id.layout_id.issue_date">
-                        <span t-field="o.check_issue_date"/>
-                    </div>
-
-                    <div t-att-style="o.checkbook_id.layout_id.style_payment_date"
-                         t-if="o.checkbook_id.layout_id.payment_date">
-                        <span t-field="o.check_payment_date"/>
-                    </div>
-
-                    <div t-att-style="o.checkbook_id.layout_id.style_name"
-                         t-if="o.checkbook_id.layout_id.name">
-                        <span t-field="o.partner_id.name"/>
-                    </div>
-
-                    <div t-att-style="o.checkbook_id.layout_id.style_amount_words"
-                         t-if="o.checkbook_id.layout_id.amount_words">
-                        <span t-field="o.check_amount_in_words"/>
-                        <span t-field="o.checkbook_id.layout_id.style_amount_words"/>
-                    </div>
-                    <div t-att-style="o.checkbook_id.layout_id.style_check_no"
-                         t-if="o.checkbook_id.layout_id.check_no">
-                        cheque Nro:
-                        <span t-field="o.check_id.name"/>
-                    </div>
+                <div
+                     style="background-color: powderblue;height: 300px;border: 1px solid red;">
+                    <t t-call="l10n_py_check_printing.single_check"/>
                 </div>
+
             </t>
         </t>
     </template>
+
 </odoo>
