--- a/l10n_py_invoice_document/views/partner_type_view.xml
+++ b/l10n_py_invoice_document/views/partner_type_view.xml
@@ -15,7 +15,7 @@
                     <group>
                         <field name="ruc_required_person" widget="boolean_toggle"/>
                         <field name="ruc_required_company" widget="boolean_toggle"/>
-                        <field name="default_account"/>
+                        <field name="default_account" required="True"/>
                     </group>
                 </group>
             </form>
