--- a/l10n_py_reports/views/account_payment_view.xml
+++ b/l10n_py_reports/views/account_payment_view.xml
@@ -3,7 +3,7 @@
 
     <record id="view_account_payment_form" model="ir.ui.view">
         <field name="model">account.payment</field>
-        <field name="name">INVOICE DOCUMENT</field>
+        <field name="name">REPORTS receiptbook</field>
         <field name="inherit_id" ref="account.view_account_payment_form"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='journal_id']" position="after">
