--- a/l10n_py_invoice_document/views/account_move_view.xml
+++ b/l10n_py_invoice_document/views/account_move_view.xml
@@ -1,5 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
+    <!-- Mostrar siempre el diario -->
+    <record id="view_move_form_1" model="ir.ui.view">
+        <field name="name">INVOICE DOCUMENT journal</field>
+        <field name="model">account.move</field>
+        <field name="inherit_id" ref="account.view_move_form"/>
+        <field name="arch" type="xml">
+            <field name="journal_id" position="attributes">
+                <attribute name="groups"/>
+            </field>
+        </field>
+    </record>
+
     <!-- agregar el timbrado del en la factura -->
     <record id="view_move_form" model="ir.ui.view">
         <field name="name">INVOICE DOCUMENT timbrado</field>
